--- a/game_files/css/main.css
+++ b/game_files/css/main.css
@@ -34,6 +34,9 @@ header {
     min-width: 750px;
 
     background-color: rgb(217, 234, 211);
+    background-image: url('../images/background.png');
+    background-size: cover;
+    background-position: center;
 
     display: grid;
     gap: 10px;
