--- a/game_files/css/main.css
+++ b/game_files/css/main.css
@@ -14,14 +14,14 @@ body {
     flex-direction: column;
     align-items: center;
     align-content: center;
-    height: 98vmin;
+    height: 90vmin;
     gap: 5px;
 
     background-color: rgb(33, 33, 33);
 }
 
 header {
-    flex: .25;
+    flex: 1;
     width: 80%;
     min-width: 750px;
 
@@ -33,18 +33,19 @@ header {
     width: 80%;
     min-width: 750px;
 
-    background-color: rgb(217, 234, 211);
+    background-color: rgb(33, 33, 33);
     background-image: url('../images/background.png');
-    background-size: cover;
+    background-size: 100%;
     background-position: center;
 
     display: grid;
-    gap: 10px;
     grid-template: 
-    " . . score . . " 1fr
+    " . . score . . " .25fr
     " . hero . encounter . " 3fr
-    " . message message message . " 1fr
+    " . message message message . " .25fr
     / .5fr 1fr 1fr 1fr .5fr; 
+
+    color: white;
 }
 
 #score {
@@ -63,6 +64,12 @@ header {
     grid-area: message;
 }
 
+#score * {
+    margin: 10px 0 0 0;
+}
+#message * {
+    margin: 0 0 10px 0;
+}
 .bottom {
     flex: 2;
     width: 80%;
