Added effect when player is defeated

--- a/game_files/css/main.css
+++ b/game_files/css/main.css
@@ -85,6 +85,10 @@ header {
     100% {transform: translate(0px, 0px)};
 }
 
+.defeat img{
+    filter: grayscale();
+}
+
 #message {
     grid-area: message;
 }
